--- a/technische-dokumentation/8gruppe_dokumentation_00_main.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_00_main.tex
@@ -17,9 +17,9 @@
 \pagestyle{fancy} 
 \fancyhf{} 									% alle Kopf- und Fußzeilenfelder bereinigen; 
 											% löscht doppelte Seitenzahlen!
-\fancyhead[L]{} 								% Kopfzeile links
-\fancyhead[C]{}								% zentrierte Kopfzeile
-\fancyhead[R]{} 								% Kopfzeile rechts
+\fancyhead[L]{Technische Dokumentation} 								% Kopfzeile links
+\fancyhead[C]{Fastforward GmbH}								% zentrierte Kopfzeile
+\fancyhead[R]{Gruppe 8 - \today} 								% Kopfzeile rechts
 %\fancyhead[LO]{Test}						% Odd: ungerade Seiten
 %\fancyhead[RO]{Test}
 %\fancyhead[CO]{Test}
@@ -156,6 +156,5 @@ dargestellt, jedoch mit nummerierten Zeilen.
 \include{8gruppe_dokumentation_05}
 \include{8gruppe_dokumentation_06}
 \include{8gruppe_dokumentation_07}
-\include{8gruppe_dokumentation_08}
 
 \end{document}
