--- a/technische-dokumentation/8gruppe_dokumentation_01.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_01.tex
@@ -38,20 +38,19 @@ fastforward.hhbk.de.		MX		fastforward.hhbk.de
 
 \subsection{SixXS}
 
-Folgende Daten wurden verwendet, um mit einem CISCO Router einen IPv6 via IPv4 Tunnel mit SixXS auf zu bauen.
+Folgende Daten wurden verwendet, um mit einem CISCO Router einen IPv6-via-IPv4-Tunnel mit SixXS aufzubauen.\newline	
 
-
-\begin{tabular}{|l|l|}
+\noindent \begin{tabular}{|l|l|}
 \hline
-Beschreibung			& Daten						\\
+Beschreibung				& Daten						\\
 \hline
-Router IP				& 212.72.180.241		 	\\
+Router IP				& 212.72.180.241		 		\\
 SixXS PoP IPv4			& 78.35.24.124			 	\\
 IPv6 Prefix				& /64					 	\\	
-Lokaler Router	IPv6	& 2001:4dd0:ff00:147f::2 	\\
-SixXS Router IPv6 		& 2001:4dd0:ff00:147f::1	\\
+Lokaler Router IPv6		& 2001:4dd0:ff00:147f::2 	\\
+SixXS Router IPv6 		& 2001:4dd0:ff00:147f::1		\\
 TCP Adjust-MSS			& 1420						\\
-Tunnel Mode				& ipv6ip					\\
+Tunnel Mode				& ipv6ip						\\
 \hline
 \end{tabular}
 
