--- a/technische-dokumentation/8gruppe_dokumentation_02.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_02.tex
@@ -76,6 +76,7 @@ Konfiguration der Firewall:
 #Firewalling
 
 #WAN In
+
 r1(config)#ipv6 access-list from_wan_in
 r1(config-ipv6-acl)#permit icmp any any
 r1(config-ipv6-acl)#permit tcp any any eq 22 reflect dmz-wan-reflexive timeout 300
@@ -89,7 +90,9 @@ r1(config-ipv6-acl)#exit
 r1(config)#interface Tunnel61
 r1(config-if)#ipv6 traffic-filter from_wan_in in
 
+
 #DMZ In
+
 r1(config)#ipv6 access-list dmz_in
 r1(config-ipv6-acl)#permit icmp any any
 r1(config-ipv6-acl)#permit udp any any eq domain reflect wan-dmz-reflexive timeout 5
@@ -98,18 +101,22 @@ r1(config-ipv6-acl)#permit tcp any any eq www reflect wan-dmz-reflexive timeout 
 r1(config-ipv6-acl)#permit tcp any any eq 443 reflect wan-dmz-reflexive timeout 5
 r1(config-ipv6-acl)#permit tcp any any eq smtp reflect wan-dmz-reflexive timeout 5
 r1(config-ipv6-acl)#evaluate dmz-wan-reflexive
+r1(config-ipv6-acl)#evaluate wan-lan-reflexive
 r1(config-ipv6-acl)#exit
 
 r1(config)#interface FastEthernet0/1.10
 r1(config-if)#ipv6 traffic-filter dmz_in in
 
+
 #LAN In
+
 r1(config)#ipv6 access-list lan_in
 r1(config-ipv6-acl)#permit ipv6 any any reflect wan-lan-reflexive timeout 5
 r1(config-ipv6-acl)#exit
 
 r1(config)#interface FastEthernet0/1.20
 r1(config-if)#ipv6 traffic-filter lan_in in
+
 
 #IPv4 WAN In
 r1(config)#ip access-list extended from_wan_v4_in
@@ -121,6 +128,7 @@ r1(config)#interface FastEthernet0/0
 r1(config-if)#ip access-group from_wan_v4_in in
 r1(config-ext-nacl)#permit icmp any any
 r1(config-ext-nacl)#exit
+
 
 #Firewall Regeln auslesen
 r1(config)#do show ipv6 access-list
