Achtung die Kurve

--- a/technische-dokumentation/8gruppe_dokumentation_07.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_07.tex
@@ -215,7 +215,7 @@ Die Erreichbarkeit des Mailservers wurde von der Kommandozeile per {\texttt teln
 
 Mit den folgenden Kommandos wurde getestet, ob die Firewall nicht freigeschaltete Ports blockiert. Dazu wurde auf dem Linux-Server mit {\texttt netcat} ein Port geöffnet und von extern geprüft, ob sich zu diesem Port verbunden werden kann.\newline
 
-\begin{lstlisting}
+\begin{lstlisting}[numbers=none]
  #Listening auf dem Linux-Server
 > netcat -l -p 1337
 
